<!--
 ! Excerpted from "Kotlin and Android Development featuring Jetpack",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material,
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose.
 ! Visit https://pragprog.com/titles/mfjetpack for more book information.
-->
<resources>
    <string name="app_name">Android Baseball League</string>
    <string name="app_short_name">ABL</string>
    <string name="teams">Teams</string>
    <string name="team_logo">Team Logo</string>
    <string name="abl_logo">ABL Logo</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="standings">Standings</string>
    <string name="players">Players</string>
    <string name="leaders">Leaders</string>
    <string name="settings">Settings</string>
    <string name="about_the_app">About the App</string>
    <string name="wins_w">W</string>
    <string name="losses_l">L</string>
    <string name="percentage_abbr">PCT</string>
    <string name="games_back_abbr">GB</string>
    <string name="last_ten_abbr">L10</string>
    <string name="streak_abbr">STRK</string>
    <string name="view_roster">View Roster</string>
    <string name="in_abl">in ABL</string>
    <string name="network_exception_message">A network error has occurred. Please check your connection and try again.</string>
    <string name="request_exception_message">The API request was invalid. Please try again.</string>
    <string name="general_exception_message">An error occurred retrieving data. Please try again.</string>
    <string name="scoreboard_first_base">Scoreboard First Base</string>
    <string name="scoreboard_second_base">Scoreboard Second Base</string>
    <string name="scoreboard_third_base">Scoreboard Third Base</string>
    <string name="scoreboard_left_arrow">Scoreboard Left Arrow</string>
    <string name="scoreboard_right_arrow">Scoreboard Right Arrow</string>
    <string name="player_team_logo">Team Logo for Player</string>
    <string name="single_player_team_logo">Team Logo for a Player</string>
    <string name="search_players">Search Players…</string>
    <string name="about_the_app_description"><p>The Android Baseball League was specifically created by Michael Fazio for the <a href="https://www.pragprog.com/">Pragmatic Bookshelf</a> book "<a href="https://pragprog.com/titles/mfjetpack/kotlin-and-android-development-featuring-jetpack/">Kotlin and Android Development featuring Jetpack</a>". This includes all scores, stats, and teams in the ABL.</p></string>
    <string name="image_credits">Image Credits</string>
    <string name="about_the_app_image_credits"><p>Most images in the app were taken from <a href="https://www.flaticon.com/">FlatIcon.com</a> or <a href="https://materialdesignicons.com/">MaterialDesignIcons.com</a>. For specific image rights, please use the button below. ↓</p></string>
    <string name="about_the_app_image_player_info"><p>All references to real people in the league are likely on purpose unless, of course, they\'re not. Player names were randomly generated when the league was created, plus there were some real friends, family, and colleagues added.\nAlso, there are a few real players, like <a href="https://www.baseball-reference.com/players/c/crookja01.shtml">Jack Crooks</a>, who somehow hit .213 in 1892 yet had a .400 OBP. Dude had 95 hits and 136 walks that season while slugging under .300. This may only be interesting to me and the <a href="https://smile.amazon.com/Hidden-Ball-Trick-Baseball-1876-1919/dp/1793996938/">Hidden Ball Trick</a> guys (thanks Jeremy and Jim for the discovery!).</p></string>
    <string name="image_credits_image">Image Credits Image</string>
    <string name="team_color_nav_bar">Use Team Color for Nav Bar?</string>
    <string name="favorite_team">Favorite Team</string>
    <string name="user_name">User Name</string>
    <string name="none">None</string>
    <string name="starting_location">Starting Location</string>
    <string name="info_about_the_app">Information about the app</string>
    <string name="credits">Credits</string>
    <string name="about">About</string>

    <string name="notifications">Notifications</string>
    <string name="default_notification_channel_id">ablNotificationsDefault</string>
    <string name="dismiss">Dismiss</string>
    <string name="pke_notification_long_text">The Pewaukee Princesses are the brainchild of Hazel Fazio. She came up with the nickname, selected the logo, and chose to include her cousins on the team. Oh, and her \"Oddfather\" at catcher.</string>
    <string name="notification_destination_player">player</string>
    <string name="notification_destination_team">team</string>
    <string name="generic_push_title">Push - %1$s</string>
    <string name="generic_push_description">This is a notification from the ABLFirebaseMessaging Service focusing on %1$s.</string>
    <string name="share">Share</string>
    <string name="lopez_notification_title">Rolando Lopez!</string>
    <string name="lopez_notification_text">Click this notification to go to Rolando\'s player page.</string>
    <string name="pke_notification_title">The Legendary Pewaukee Princesses</string>
    <string name="pke_notification_short_text">Click to go to the Princesses\' team page.</string>
    <string name="scoreboard_notification_title">Games are Happening Today</string>
    <string name="scoreboard_notification_text">See the scoreboard or check current standings</string>

</resources>